# solana-agent-mesh

./: Anchor.toml  README.md
app/: package.json
app/src/: agents.ts  index.ts  jupiter.ts  mesh-controller.ts  solana-client.ts
programs/agent-mesh/: Cargo.toml
programs/agent-mesh/src/: lib.rs
