[package]
name = "agent-mesh"
version = "0.1.0"
description = "Solana Agent Mesh - Wallet-Attached, Model-Aware Agent Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_mesh"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
